2007-03-06 Borut Razem <borut.razem AT siol.net>

	* local/cf-x86-i586-mingw32msvc.mk: the latest version of mingw gcc is
	  installed in $(HOME)/local-$(HOSTNAME); added MAKEJOBFLAGS = -j 2

2007-01-25 Bernhard Held <bernhard AT bernhardheld.de>

	* lib/bootstrap.mk,
	* lib/variables.mk,
	* sdcc-build-bootstrap.sh: put local tools in ~/local-$HOSTNAME
	* sdcc-build-bootstrap.sh: use "svn checkout" instead "svn export"
	because there's enough space and it makes administration easier,
	simplify co of sdcc-build

2007-01-24 Bernhard Held <bernhard AT bernhardheld.de>

	* lib/variables.mk: changed SVNSERVER to localhost, maybe it should
	be removed
	* lib/fetch.mk: changed SVN-URL from svn.sourceforge.net to
	sdcc.svn.sourceforge.net, because it worked better during the broken
	DNS setup; now both work, but the latter one is the official one
	* sdcc-build-bootstrap.sh: changed SVN-URL,
	export sdcc-build directly from svn,
	moved BUILDROOT from /var/tmp back to ~/build
	* local/cf-x86.mk,
	* local/cf-x86-i586-mingw32msvc.mk: added Erik's host

2007-01-24 Bernhard Held <bernhard AT bernhardheld.de>

	* /sdcc/tags/sdcc-build_before_move_to_ECF: added tag, the nightly
	build now moves from sourceforges compile farm to Erik's compile farm.

2007-01-19 Bernhard Held <bernhard AT bernhardheld.de>

	* local/x86-linux2-i586-mingw32msvc.mk: replaced --datadir by
	--datarootdir for conformance with autoconf 2.6

2006-11-06 Borut Razem <borut.razem AT siol.net>

	* lib/variables.mk: added default definitions for PREFIX and
	  HOSTPREFIX
	* components/sdcc.mk: removed --prefix=$(PREFIX) argument to configure
	  command line, use $(HOSTPREFIX)
	* local/x86-linux2-i586-mingw32msvc.mk: add --prefix=$(PREFIX) to
	  SDCCCONFIGUREFLAGS
	* lib/bootstrap.mk: skip PREFIX directories in tar.bz2 packages

2006-11-05 Borut Razem <borut.razem AT siol.net>

	* components/sdcc.mk: added --prefix=$(PREFIX) argument to configure